Added Banner and CSS styling for h1/link btn

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
     
     <main>
     <div class="banner">
+      <h1>Welcome To My Portfolio</h1>
+      <div>
+        <a href="#">View My Work</a>
+      </div>
       <!-- Div that contains banner -->
-      <img class="subheadingimg" src="Assets\PlaceHolder.jpg" alt="WorkPlace"
+      <img class="subheadingimg" src="Assets\sabri-tuzcu-wunVFNvqhfE-unsplash.jpg" alt="WorkPlace">
     </div>
-
     
       <!-- Main application content -->
       <!-- 1st Section is about me -->
@@ -45,7 +48,7 @@
           my front end skills in HTML, CSS and JAVA. Currently i am a qualified
           Pharmacist working in the primary care sector. This course will allow
           me to enhance the integrations of systems between different parts of
-          the NHS primary care strucutre. It will also allow me to develp better
+          the primary care strucutre. It will also allow me to develp better
           systems for internal use to increase proficiency and productivity.
         </p>
       </section>
@@ -93,14 +96,18 @@
       <!-- section about contact me -->
       <section class="contactmes">
         <div class="floatleft3">
+
         <h1>Contact Me</h1>
+
         </div>
 
-        <div class="floatright3"></div>
+        <div class="floatright3">
         <a  href="#">Email</a>
         <a  href="#">Linkdin</a>
         <a  href="#">Facebook</a>
         <a  href="#">Twitter</a>
+      </div>
+
       </div class="contactform">
         </div>
       </section>
