Button in banner updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="banner">
       <h1>Welcome To My Portfolio</h1>
       <div>
-        <a href="#">View My Work</a>
+        <a class="btn" href="#">View My Work</a>
       </div>
       <!-- Div that contains banner -->
       <img class="subheadingimg" src="Assets\sabri-tuzcu-wunVFNvqhfE-unsplash.jpg" alt="WorkPlace">
