folder restructure and avatar

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
         <a class="btn" href="#">View My Work</a>
       </div>
       <!-- Div that contains banner -->
-      <img class="subheadingimg" src="Assets\sabri-tuzcu-wunVFNvqhfE-unsplash.jpg" alt="WorkPlace">
+      <img class="subheadingimg" src="Assets\Images\sabri-tuzcu-wunVFNvqhfE-unsplash.jpg" alt="WorkPlace">
     </div>
     
       <!-- Main application content -->
       <!-- 1st Section is about me -->
       <section class="aboutmes">
-        <h1 class=" floatleft1">About Me</h1>
+        <div>
+        <h1 class=" floatleft1">About Me</h1> 
+      </div>
         <p class="aboutmep">
           I am a inspiring software developer. I am currently undertaking a
           bootcamp course at Birmingham University which is helping me develop
@@ -58,35 +60,35 @@
         <h1 class="floatleft2">My Work</h1>
         <img
           class="Imagedeck"
-          src="Assets\Image Slide.jpg"
+          src="Assets\Images\Image Slide.jpg"
           alt="MyWork"
           width="65.0%"
-          height="65.0%"
+          height="66.0%"
         />
         <img
           class="Imagedeck"
-          src="Assets\Image Slide.jpg"
+          src="Assets\Images\Image Slide.jpg"
           alt="MyWork"
           width="16.0%"
           height="16.0%"
         />
         <img
           class="Imagedeck"
-          src="Assets\Image Slide.jpg"
+          src="Assets\Images\Image Slide.jpg"
           alt="MyWork"
           width="16.0%"
           height="16.0%"
         />
         <img
           class="Imagedeck"
-          src="Assets\Image Slide.jpg"
+          src="Assets\Images\Image Slide.jpg"
           alt="MyWork"
           width="16.0%"
           height="16.0%"
         />
         <img
           class="Imagedeck"
-          src="Assets\Image Slide.jpg"
+          src="Assets\Images\Image Slide.jpg"
           alt="MyWork"
           width="16.0%"
           height="16.0%"
