About me section edited for mobile view

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div>
         <h1 class=" floatleft1">About Me</h1> 
       </div>
+      <div>
         <p class="aboutmep">
           I am a inspiring software developer. I am currently undertaking a
           bootcamp course at Birmingham University which is helping me develop
@@ -53,11 +54,14 @@
           the primary care strucutre. It will also allow me to develp better
           systems for internal use to increase proficiency and productivity.
         </p>
+      </div>
+      
       </section>
 
       <!-- Section About My Work -->
       <section class="decks">
         <h1 class="floatleft2">My Work</h1>
+        
         <img
           class="Imagedeck"
           src="Assets\Images\Image Slide.jpg"
