--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSJ Portfolio</title>
-    <link rel="stylesheet" href="03-Homework\style.css" />
+    <link rel="stylesheet" href="./Assets/style.css" />
   </head>
 
   <body>
@@ -36,12 +36,13 @@
 
       <!-- Main application content -->
       <!-- 1st Section is about me -->
-      <section id="aboutme" class="aboutmes">
-        <div>
-          <h1 class="floatleft1">About Me</h1>
+
+      <section class="aboutmes">
+        <div class="floatleft1">
+          <h1>About Me</h1>
         </div>
-        <div>
-          <p class="aboutmep">
+        <div class="aboutmep">
+          <p>
             I am a inspiring software developer. I am currently undertaking a
             bootcamp course at Birmingham University which is helping me develop
             my front end skills in HTML, CSS and JAVA. Currently i am a
@@ -55,56 +56,43 @@
       </section>
 
       <!-- Section About My Work -->
-      <section id="mywork" class="decks">
+      <section id="mywork" class="imageparentcontainer">
         <!-- Left floating  title -->
-        <div>
-          <h1 class="floatleft2">My Work</h1>
+        <div class="floatleft2">
+          <h1>My Work</h1>
         </div>
 
         <!-- image tiles/decks -->
-        <div class="Imagedeck">
-          <div class="tile2">
-            <p>
-              <a href="https://github.com/jeerjs/Homework_1"></a>
-              <img
-                src="./Assets/Images/Refractory project.png"
-                alt="MyWork"
-                width="50.0%"
-                height="50.0%"
-              />
-            </p>
-          </div>
 
-          <div>
-            <img
-              class="tile1"
-              src="Assets\Images\Image Slide.jpg"
-              alt="MyWork"
-              width="15.0%"
-              height="15.0%"
-            />
-          </div>
-
+        <div class="carddeck">
           <img
-            class="tile1"
-            src="Assets\Images\Image Slide.jpg"
+            class="card0"
+            src="./Assets/Images/PlaceHolder.jpg"
             alt="MyWork"
-            width="15.0%"
-            height="15.0%"
           />
           <img
-            class="tile1"
-            src="Assets\Images\Image Slide.jpg"
+            class="card1"
+            ;
+            src="./Assets/Images/PlaceHolder.jpg"
             alt="MyWork"
-            width="15.0%"
-            height="15.0%"
           />
           <img
-            class="tile1"
-            src="Assets\Images\Image Slide.jpg"
+            class="card2"
+            ;
+            src="./Assets/Images/PlaceHolder.jpg"
             alt="MyWork"
-            width="15.0%"
-            height="15.0%"
+          />
+          <img
+            class="card3"
+            ;
+            src="./Assets/Images/PlaceHolder.jpg"
+            alt="MyWork"
+          />
+          <img
+            class="card4"
+            ;
+            src="./Assets/Images/PlaceHolder.jpg"
+            alt="MyWork"
           />
         </div>
       </section>
