Read me file complete

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- image tiles/decks -->
 
         <div class="carddeck">
-          <div class="labelonimage">
+          <div>
             <img class="card0" height="800px" alt="MyWork" />
           </div>
 
