--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <!-- image tiles/decks -->
 
         <div class="carddeck">
-          <div>
+          <div class="imagetag1div">
+            <h3 class="imagetag1">My First Refactory Project</h3>
             <img class="card0" height="800px" alt="MyWork" />
           </div>
 
