Images Hyperlinked Section 2

--- a/index.html
+++ b/index.html
@@ -68,36 +68,47 @@
         <!-- image tiles/decks -->
 
         <div class="carddeck">
-          <div class="imagetag1div">
+          <div>
             <h3 class="imagetag1">My First Refactory Project</h3>
-            <img class="card0" height="800px" alt="MyWork" />
+            <a href="https://jeerjs.github.io/Homework_1/">
+              <img class="card0" height="800px" alt="MyWork"
+            /></a>
           </div>
 
-          <img
-            class="card1"
-            ;
-            src="./Assets/Images/PlaceHolder.jpg"
-            alt="MyWork"
-          />
-          <img
-            class="card2"
-            ;
-            src="./Assets/Images/PlaceHolder.jpg"
-            alt="MyWork"
-          />
-          <img
-            class="card3"
-            ;
-            src="./Assets/Images/PlaceHolder.jpg"
-            alt="MyWork"
-          />
+          <div>
+            <a href="https://jeerjs.github.io/Homework_WK2_JSJ/">
+              <img
+                class="card1"
+                src="./Assets/Images/PlaceHolder.jpg"
+                alt="MyWork"
+            /></a>
+          </div>
+          <div>
+            <a href="https://jeerjs.github.io/Homework_WK2_JSJ/">
+              <img
+                class="card2"
+                src="./Assets/Images/PlaceHolder.jpg"
+                alt="MyWork"
+            /></a>
+          </div>
 
-          <img
-            class="card4"
-            ;
-            src="./Assets/Images/PlaceHolder.jpg"
-            alt="MyWork"
-          />
+          <div>
+            <a href="https://jeerjs.github.io/Homework_WK2_JSJ/">
+              <img
+                class="card3"
+                src="./Assets/Images/PlaceHolder.jpg"
+                alt="MyWork"
+            /></a>
+          </div>
+
+          <div>
+            <a href="https://jeerjs.github.io/Homework_WK2_JSJ/">
+              <img
+                class="card4"
+                src="./Assets/Images/PlaceHolder.jpg"
+                alt="MyWork"
+            /></a>
+          </div>
         </div>
       </section>
 
